--- a/ortega.html
+++ b/ortega.html
@@ -22,10 +22,10 @@
                             <h6>Desde Sectores y Empresas</h6>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <button class="button topmargin-xs">Inmobiliario</button>
+                                    <button type="button" class="button topmargin-xs c-r">Inmobiliario</button>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="#">
+                                    <a id="lc1" href="#">
                                         <ion-icon name="bookmark-outline"></ion-icon>
                                     </a>
                                 </li>
@@ -34,8 +34,8 @@
                         <img src="practicanoviembre/img/inmobiliario.jpg" class="img-fluid" alt="member 1">
                         <h5 class="topmargin-sm">Vivienda residual:<br>avanzan las ventas, pero<br>todavia no el precio.</h5>
                         <p>El segmento da sus primeras<br>señales de recuperación, aunque el<br>valor del metro cuadrado en Lima<br>Top seguira bajo por algunos<br>mesea más. </p>
-                        <p class="topmargin-lg">
-                            <ion-icon name="timer-outline"></ion-icon> Lectura de 3 min</p>
+                        <ion-icon class="topmargin-lg" name="timer-outline"></ion-icon>
+                        <input class="llenado" type="text" name="text1" id="text1" size="20" placeholder="Lectura de 3 min">
                     </div>
                 </div>
 
@@ -45,10 +45,10 @@
                             <h6>Desde Management </h6>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <button class="button topmargin-xs">Talento y cultura</button>
+                                    <button class="button topmargin-xs c-a">Talento y cultura</button>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="#">
+                                    <a id="lc2" href="#">
                                         <ion-icon name="bookmark-outline"></ion-icon>
                                     </a>
                                 </li>
@@ -57,8 +57,8 @@
                         <img src="practicanoviembre/img/talento y cultura.jpg" class="img-fluid" alt="member 2">
                         <h5>Vivienda residual:<br>avanzan las ventas, pero<br>todavia no el precio.</h5>
                         <p>El segmento da sus primeras<br>señales de recuperación, aunque el<br>valor del metro cuadrado en Lima<br>Top seguira bajo por algunos<br>mesea más. </p>
-                        <p class="topmargin-lg">
-                            <ion-icon name="timer-outline"></ion-icon> Lectura de 3 min</p>
+                        <ion-icon class="topmargin-lg" name="timer-outline"></ion-icon>
+                        <input class="llenado" type="text" name="text2" id="text2" size="20" placeholder="Lectura de 3 min">
                     </div>
                 </div>
 
@@ -68,10 +68,10 @@
                             <h6>Desde Legal y politica </h6>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <button class="button topmargin-xs">Politica</button>
+                                    <button class="button topmargin-xs c-v">Politica</button>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="#">
+                                    <a id="lc3" href="#">
                                         <ion-icon name="bookmark-outline"></ion-icon>
                                     </a>
                                 </li>
@@ -80,8 +80,9 @@
                         <img src="practicanoviembre/img/politica.jpg" class="img-fluid" alt="member 3">
                         <h5>Vivienda residual:<br>avanzan las ventas, pero<br>todavia no el precio.</h5>
                         <p>El segmento da sus primeras<br>señales de recuperación, aunque el<br>valor del metro cuadrado en Lima<br>Top seguira bajo por algunos<br>mesea más. </p>
-                        <p class="topmargin-lg">
-                            <ion-icon name="timer-outline"></ion-icon> Lectura de 3 min</p>
+                        <ion-icon class="topmargin-lg" name="timer-outline"></ion-icon>
+                        <input class="llenado" type="text" name="text3" id="text3" size="20" placeholder="Lectura de 3 min">
+
                     </div>
                 </div>
 
@@ -92,10 +93,10 @@
                             <h6>Desde Sectores y Empresas </h6>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <button class="button topmargin-xs">Turismo</button>
+                                    <button class="button topmargin-xs c-r">Turismo</button>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="#">
+                                    <a id="lc3" href="#">
                                         <ion-icon name="bookmark-outline"></ion-icon>
                                     </a>
                                 </li>
@@ -104,8 +105,9 @@
                         <img src="practicanoviembre/img/turismo.jpg" class="img-fluid" alt="member 3">
                         <h5>Vivienda residual:<br>avanzan las ventas, pero<br>todavia no el precio.</h5>
                         <p>El segmento da sus primeras<br>señales de recuperación, aunque el<br>valor del metro cuadrado en Lima<br>Top seguira bajo por algunos<br>mesea más. </p>
-                        <p class="topmargin-lg">
-                            <ion-icon name="timer-outline"></ion-icon> Lectura de 3 min</p>
+                        <ion-icon class="topmargin-lg" name="timer-outline"></ion-icon>
+                        <input class="llenado" type="text" name="text4" id="text4" size="20" placeholder="Lectura de 3 min">
+                        <input class="llenado" type="text" name="text1" id="text1" size="20" placeholder="Lectura de 3 min">
                     </div>
 
 
@@ -120,6 +122,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+    <script src="practicanoviembre/script/ortega.js"></script>
 </body>
 
 </html>
