--- a/ortega.html
+++ b/ortega.html
@@ -15,99 +15,139 @@
         <div class="container">
             <div class="row">
 
-
-                <div class="col-md-3">
+                <div class="col-md-3 marder">
                     <div class="member-container">
                         <div class="member-details">
-                            <h6>Desde Sectores y Empresas</h6>
+                            <h6>Desde <span class="tr">Sectores y Empresas</span></h6>
                             <ul class="list-inline">
-                                <li class="list-inline-item">
-                                    <button type="button" class="button topmargin-xs c-r">Inmobiliario</button>
+                                <li class="list-inline-item topmargin-xs">
+                                    <button type="button" class="button c-r">Inmobiliario</button>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a id="lc1" href="#">
+                                    <a class="icon1" id="lc1" href="#">
                                         <ion-icon name="bookmark-outline"></ion-icon>
                                     </a>
                                 </li>
                             </ul>
                         </div>
-                        <img src="practicanoviembre/img/inmobiliario.jpg" class="img-fluid" alt="member 1">
-                        <h5 class="topmargin-sm">Vivienda residual:<br>avanzan las ventas, pero<br>todavia no el precio.</h5>
+                        <img src="practicanoviembre/img/inmobiliario.jpg" class="img-fluid topmargin-xs" alt="member 1">
+                        <h5 class="topmargin-sm">Vivienda residual:<br>avanzan las ventas, pero<br>todavia no el precio</h5>
                         <p>El segmento da sus primeras<br>señales de recuperación, aunque el<br>valor del metro cuadrado en Lima<br>Top seguira bajo por algunos<br>mesea más. </p>
                         <ion-icon class="topmargin-lg" name="timer-outline"></ion-icon>
-                        <input class="llenado" type="text" name="text1" id="text1" size="20" placeholder="Lectura de 3 min">
+                        <input class="form" type="text" name="text1" id="text1" size="17" value="Lectura de 3 min">
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 marder">
                     <div class="member-container">
                         <div class="member-details">
-                            <h6>Desde Management </h6>
+                            <h6>Desde <span class="ta">Management </span></h6>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <button class="button topmargin-xs c-a">Talento y cultura</button>
+                                    <button id="mostfec" class="button topmargin-xs c-a">Talento y cultura</button>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a id="lc2" href="#">
+                                    <a class="icon2" id="lc2" href="#">
                                         <ion-icon name="bookmark-outline"></ion-icon>
                                     </a>
                                 </li>
                             </ul>
                         </div>
-                        <img src="practicanoviembre/img/talento y cultura.jpg" class="img-fluid" alt="member 2">
-                        <h5>Vivienda residual:<br>avanzan las ventas, pero<br>todavia no el precio.</h5>
-                        <p>El segmento da sus primeras<br>señales de recuperación, aunque el<br>valor del metro cuadrado en Lima<br>Top seguira bajo por algunos<br>mesea más. </p>
+                        <img src="practicanoviembre/img/talento y cultura.jpg" class="img-fluid topmargin-xs" alt="member 2">
+                        <h5 class="topmargin-sm">El nuevo CEO de Delois y<br>otras movidas<br>empresariales</h5>
+                        <p>Kia Perú, EY Perú y DLA Piper Perú<br>también realizaron nuevos<br>nombramientos.</p>
                         <ion-icon class="topmargin-lg" name="timer-outline"></ion-icon>
-                        <input class="llenado" type="text" name="text2" id="text2" size="20" placeholder="Lectura de 3 min">
+                        <input class="form" type="text" name="text2" id="text2" size="17" value="Lectura de 2 min">
+                        <input class="form espacio" type="text" name="text5" id="text5" size="22">
                     </div>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-3 marder">
                     <div class="member-container">
                         <div class="member-details">
-                            <h6>Desde Legal y politica </h6>
+                            <h6>Desde <span class="tv">Legal y politica</span> </h6>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <button class="button topmargin-xs c-v">Politica</button>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a id="lc3" href="#">
+                                    <a class="icon3" id="lc3" href="#">
                                         <ion-icon name="bookmark-outline"></ion-icon>
                                     </a>
                                 </li>
                             </ul>
                         </div>
-                        <img src="practicanoviembre/img/politica.jpg" class="img-fluid" alt="member 3">
-                        <h5>Vivienda residual:<br>avanzan las ventas, pero<br>todavia no el precio.</h5>
-                        <p>El segmento da sus primeras<br>señales de recuperación, aunque el<br>valor del metro cuadrado en Lima<br>Top seguira bajo por algunos<br>mesea más. </p>
+                        <img src="practicanoviembre/img/politica.jpg" class="img-fluid topmargin-xs" alt="member 3">
+                        <h5 class="topmargin-sm">[Editorial] ¿Y la sensatez<br>económica?</h5>
+                        <p>LA VOZ DE SE. Las agendas<br>politicas a nivel regional y<br>parlamentario comprometen la<br>recuperación económica. El<br>gobierno debe agotar todo<br>esfuerzo para neutralizarlas.</p>
                         <ion-icon class="topmargin-lg" name="timer-outline"></ion-icon>
-                        <input class="llenado" type="text" name="text3" id="text3" size="20" placeholder="Lectura de 3 min">
+                        <input class="form" type="text" name="text3" id="text3" size="17" value="Lectura de 3 min">
 
                     </div>
                 </div>
 
 
-                <div class="col-md-3">
+                <div class="col-md-3 marder">
                     <div class="member-container">
                         <div class="member-details">
-                            <h6>Desde Sectores y Empresas </h6>
+                            <h6>Desde <span class="tr">Sectores y Empresas</span> </h6>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <button class="button topmargin-xs c-r">Turismo</button>
+                                    <button id="mostpan" class="button topmargin-xs c-r">Turismo</button>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a id="lc3" href="#">
+                                    <a class="icon4" id="lc4" href="#">
                                         <ion-icon name="bookmark-outline"></ion-icon>
                                     </a>
                                 </li>
                             </ul>
                         </div>
-                        <img src="practicanoviembre/img/turismo.jpg" class="img-fluid" alt="member 3">
-                        <h5>Vivienda residual:<br>avanzan las ventas, pero<br>todavia no el precio.</h5>
-                        <p>El segmento da sus primeras<br>señales de recuperación, aunque el<br>valor del metro cuadrado en Lima<br>Top seguira bajo por algunos<br>mesea más. </p>
+                        <section id="turismo">
+                            <img src="practicanoviembre/img/turismo.jpg" class="img-fluid topmargin-xs" alt="member 3">
+                            <h5 class="topmargin-sm">Reapertura de fronteras:<br>hoy inicia la reactivación<br>del circuito turistico<br>regional</h5>
+                            <p>El regreso de los vuelos<br>internacionales desde el 5 de<br>octubre, es el comienzo de la<br>transición de la reactivación<br>turistica interna a la región. Sin<br>embargo, algunos factores pueden<br>retr...</p>
+                        </section>
+                        <section id="fotos">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-6 topmargin-sm">
+                                        <div class="member-container">
+                                            <img src="img/g1.png" class="img-fluid" alt="member 1">
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6 topmargin-sm">
+                                        <div class="member-container">
+                                            <img src="img/g1.png" class="img-fluid" alt="member 1">
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6 topmargin-sm">
+                                        <div class="member-container">
+                                            <img src="img/g1.png" class="img-fluid" alt="member 1">
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6 topmargin-sm">
+                                        <div class="member-container">
+                                            <img src="img/g1.png" class="img-fluid" alt="member 1">
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6 topmargin-sm">
+                                        <div class="member-container">
+                                            <img src="img/g1.png" class="img-fluid" alt="member 1">
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </section>
+
+
                         <ion-icon class="topmargin-lg" name="timer-outline"></ion-icon>
-                        <input class="llenado" type="text" name="text4" id="text4" size="20" placeholder="Lectura de 3 min">
-                        <input class="llenado" type="text" name="text1" id="text1" size="20" placeholder="Lectura de 3 min">
+                        <input class="form" type="text" name="text4" id="text4" size="17" value="Lectura de 5 min">
+
                     </div>
 
 
